--- a/public/patterns/04-pages-00-homepage/04-pages-00-homepage.escaped.html
+++ b/public/patterns/04-pages-00-homepage/04-pages-00-homepage.escaped.html
@@ -349,64 +349,15 @@
         		&lt;/p&gt;
         	&lt;/div&gt;
         &lt;/div&gt;
-        &lt;div id=&quot;pnlInterestingProjects&quot; class=&quot;content-item large&quot;&gt;
-        	&lt;h3 class=&quot;section-title&quot;&gt;Suosittuja hankkeita
-        	&lt;/h3&gt;
-        	&lt;div class=&quot;list-lift&quot;&gt;
-        		&lt;div class=&quot;content-list&quot;&gt;
-        			&lt;ul&gt;
-        				&lt;li class=&quot;single-list-item&quot;&gt;
-        					&lt;ul class=&quot;items-container&quot;&gt;
-        						&lt;li class=&quot;block-item&quot;&gt;
-        							&lt;div class=&quot;lad&quot;&gt;
-        								&lt;a href=&quot;#&quot;&gt;Toinen Lorem ipsum hanke&lt;/a&gt;
-        								&lt;p class=&quot;description&quot;&gt;Lorem ipsum kuvausta t&Atilde;&curren;h&Atilde;&curren;n&lt;/p&gt;
-        							&lt;/div&gt;
-        						&lt;/li&gt;
-        					&lt;/ul&gt;
-        				&lt;/li&gt;
-        				&lt;li class=&quot;single-list-item&quot;&gt;
-        					&lt;ul class=&quot;items-container&quot;&gt;
-        						&lt;li class=&quot;block-item&quot;&gt;
-        							&lt;div class=&quot;lad&quot;&gt;
-        								&lt;a href=&quot;#&quot;&gt;Kolmas Lorem ipsum hanke&lt;/a&gt;
-        								&lt;p class=&quot;description&quot;&gt;Lorem ipsum kuvausta t&Atilde;&curren;h&Atilde;&curren;n&lt;/p&gt;
-        							&lt;/div&gt;
-        						&lt;/li&gt;
-        					&lt;/ul&gt;
-        				&lt;/li&gt;
-        			&lt;/ul&gt;
-        		&lt;/div&gt;
-        	&lt;/div&gt;
-        	&lt;p class=&quot;read-more&quot;&gt;
-        		&lt;a href=&quot;#&quot;&gt;N&Atilde;&curren;yt&Atilde;&curren; kaikki hankkeet&lt;/a&gt;
-        	&lt;/p&gt;
-        &lt;/div&gt;
       &lt;/section&gt;
       &lt;aside class=&quot;l-sidebar&quot;&gt;
         &lt;section id=&quot;ProjectSearch&quot; class=&quot;content-item project-search&quot;&gt;
-          &lt;h3 class=&quot;section-title&quot;&gt;
-            Etsi hankkeita joihin voit osallistua
-          &lt;/h3&gt;
-          &lt;span class=&quot;select-style&quot;&gt;
-            &lt;span class=&quot;border-fix&quot;&gt;
-              &lt;select id=&quot;Main_ddlValitsePaikkakunta&quot; class=&quot;btn-group&quot;&gt;
-                &lt;option selected=&quot;selected&quot; value=&quot;&quot;&gt;---Paikkakunta---&lt;/option&gt;
-                &lt;option value=&quot;11452&quot;&gt;Helsinki&lt;/option&gt;
-                &lt;option value=&quot;11453&quot;&gt;Turku&lt;/option&gt;
-                &lt;option value=&quot;11453&quot;&gt;Tampere&lt;/option&gt;
-              &lt;/select&gt;
-            &lt;/span&gt;
-          &lt;/span&gt;
-          &lt;b class=&quot;block-element&quot;&gt;Tai&lt;/b&gt;
+          &lt;div class=&quot;helper-container&quot;&gt;
+            &lt;span class=&quot;icon-help&quot; title=&quot;Voit etsi&Atilde;&curren; hankkeita asiasanojen ja paikkakuntien mukaan&quot; placement=&quot;top&quot;&gt;Etsi hankkeita joihin voit osallistua&lt;/span&gt;
+            &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;Voit etsi&Atilde;&curren; hankkeita asiasanojen ja paikkakuntien mukaan&lt;/p&gt;
+          &lt;/div&gt;
           &lt;div class=&quot;inline-form search-form&quot;&gt;
-            &lt;legend class=&quot;is-vishidden&quot;&gt;Search&lt;/legend&gt;
-            &lt;div id=&quot;pnlHankeSearch&quot; class=&quot;form-element&quot; title=&quot;Hae asiasanalla...&quot; onkeypress=&quot;javascript:return WebForm_FireDefaultButton(event, 'btnHaeHanke')&quot;&gt;
-              &lt;label for=&quot;btnHaeHanke&quot; class=&quot;is-vishidden&quot;&gt;Hae asiasanalla&lt;/label&gt;
-              &lt;input name=&quot;ctl00$Main$btnHaeHanke&quot; type=&quot;search&quot; placeholder=&quot;Hae asiasanalla...&quot; maxlength=&quot;300&quot; id=&quot;btnHaeHanke&quot; tabindex=&quot;10&quot; class=&quot;text-quicksearch search-field ctl-text ellipsis&quot; autocomplete=&quot;off&quot; /&gt;
-              &lt;input type=&quot;submit&quot; name=&quot;ctl00$Main$btnHaeHanke&quot; value=&quot;&quot; id=&quot;Main_btnHaeHanke&quot; class=&quot;button-quicksearch&quot; /&gt;
-              &lt;i class=&quot;icon-search&quot;&gt;&lt;/i&gt;
-            &lt;/div&gt;
+            &lt;ul id=&quot;tbHaeHanke&quot; class=&quot;tagit-list&quot;&gt;&lt;/ul&gt;
           &lt;/div&gt;
         &lt;/section&gt;
         &lt;section id=&quot;ExternalRss&quot; class=&quot;content-item&quot;&gt;
