--- a/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.escaped.html
+++ b/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.escaped.html
@@ -210,20 +210,20 @@
   	&lt;/section&gt;
   &lt;/header&gt;
   &lt;!-- End .header --&gt;  &lt;section role=&quot;main&quot; class=&quot;show-hanke-form&quot;&gt;
-    &lt;div&gt;
-      &lt;div&gt;
-        &lt;div class=&quot;hanke-img-container&quot;&gt;
-          &lt;img src=&quot;../../images/fpo_16x9.png&quot; alt=&quot;Taustakuva&quot; class=&quot;hanke-bg&quot; /&gt;
-          &lt;img src=&quot;../../images/fpo_avatar.png&quot; alt=&quot;Logo&quot; class=&quot;hanke-logo&quot; /&gt;
-        &lt;/div&gt;
-        &lt;h1 class=&quot;hanke-title&quot;&gt;Hankkeen nimi Lorem ipsum dolor sit met&lt;/h1&gt;
+    &lt;div class=&quot;hanke-img-container&quot;&gt;
+      &lt;img src=&quot;../../images/fpo_16x9.png&quot; alt=&quot;Taustakuva&quot; class=&quot;hanke-bg&quot; /&gt;
+      &lt;div class=&quot;logo-container&quot;&gt;
+        &lt;img src=&quot;../../images/fpo_avatar.png&quot; alt=&quot;Logo&quot; class=&quot;hanke-logo&quot; /&gt;
       &lt;/div&gt;
-      &lt;div class=&quot;admin-tools&quot;&gt;
-        &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Muokkaa perustietoja&quot; /&gt;
-        &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Kirjoita yhteenveto&quot; /&gt;
-        &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Lis&Atilde;&curren;&Atilde;&curren; kieliversio&quot; /&gt;
-        &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Osallistumisraportti&quot; /&gt;
-      &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;hanke-title&quot;&gt;
+      &lt;h1&gt;Hankkeen nimi Lorem ipsum dolor sit amet,consectetur adipiscing elit. Donec eget elementum nibh&lt;/h1&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;admin-tools&quot;&gt;
+      &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Muokkaa perustietoja&quot; /&gt;
+      &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Kirjoita yhteenveto&quot; /&gt;
+      &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Lis&Atilde;&curren;&Atilde;&curren; kieliversio&quot; /&gt;
+      &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Osallistumisraportti&quot; /&gt;
     &lt;/div&gt;
     &lt;div class=&quot;g&quot;&gt;
       &lt;div class=&quot;g-2up&quot;&gt;
