--- a/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
+++ b/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1402406614" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1402493555" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402406614" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402406614" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402493555" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402493555" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -246,20 +246,20 @@
   	</section>
   </header>
   <!-- End .header -->  <section role="main" class="show-hanke-form">
-    <div>
-      <div>
-        <div class="hanke-img-container">
-          <img src="../../images/fpo_16x9.png" alt="Taustakuva" class="hanke-bg" />
-          <img src="../../images/fpo_avatar.png" alt="Logo" class="hanke-logo" />
-        </div>
-        <h1 class="hanke-title">Hankkeen nimi Lorem ipsum dolor sit met</h1>
+    <div class="hanke-img-container">
+      <img src="../../images/fpo_16x9.png" alt="Taustakuva" class="hanke-bg" />
+      <div class="logo-container">
+        <img src="../../images/fpo_avatar.png" alt="Logo" class="hanke-logo" />
       </div>
-      <div class="admin-tools">
-        <input class="btn" type="submit" value="Muokkaa perustietoja" />
-        <input class="btn" type="submit" value="Kirjoita yhteenveto" />
-        <input class="btn" type="submit" value="Lisää kieliversio" />
-        <input class="btn" type="submit" value="Osallistumisraportti" />
-      </div>
+    </div>
+    <div class="hanke-title">
+      <h1>Hankkeen nimi Lorem ipsum dolor sit amet,consectetur adipiscing elit. Donec eget elementum nibh</h1>
+    </div>
+    <div class="admin-tools">
+      <input class="btn" type="submit" value="Muokkaa perustietoja" />
+      <input class="btn" type="submit" value="Kirjoita yhteenveto" />
+      <input class="btn" type="submit" value="Lisää kieliversio" />
+      <input class="btn" type="submit" value="Osallistumisraportti" />
     </div>
     <div class="g">
       <div class="g-2up">
@@ -845,10 +845,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1402406614">
+	<script id="pl-js-polyfill-insert-1402493555">
 		(function() {
 			if (self != top) {
-				var cb = '1402406614';
+				var cb = '1402493555';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -857,10 +857,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1402406614">
+	<script id="pl-js-insert-1402493555">
 		(function() {
 			if (self != top) {
-				var cb = '1402406614';
+				var cb = '1402493555';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
